--- a/src/app.html
+++ b/src/app.html
@@ -2,11 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<!-- <link rel="icon" href="%sveltekit.assets%/favicon.png"  type="image/png" /> -->
+		<link rel="icon" href="%sveltekit.assets%/favicon.svg"  type="image/svg+xml" />
+		<title>Darkcloud</title>
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover">	
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
