--- a/src/app.html
+++ b/src/app.html
@@ -8,8 +8,7 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<!-- <body data-sveltekit-preload-data="hover">	 -->
-	<body>	
+	<body data-sveltekit-preload-data="false">	
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
